--- a/css/inputGoogle.css
+++ b/css/inputGoogle.css
@@ -2,7 +2,6 @@
   display: grid;
   width: 200px;
   padding: 3px 10px;
-  font-size: 1em;
   grid-template-areas: "input";
 
   > * {
@@ -34,37 +33,10 @@
 
 /* Ajuste para Mobile */
 @media (max-width: 600px) {
-  .label {
-    display: grid;
-    width: 200px;
-    padding: 3px 10px;
-    font-size: 1em;
-    grid-template-areas: "input";
-
-    > * {
-      grid-area: input;
-    }
-  }
-
   .span {
-    transform-origin: left;
-    transition: transfom 0.5s color 0.5s;
-  }
-
-  .input {
-    background: transparent;
-    height: 80%;
-    border: none;
-    outline: none;
-    border-bottom: 2px solid green;
-    font: inherit;
-    border-radius: 0px;
-    padding-left: 2px;
-
-    &:focus + .span,
-    &:not(:placeholder-shown) + .span {
-      color: green;
-      transform: translate(0, -100%) scale(0.8);
-    }
+    display: flex;
+    align-items:end;
+    padding-left:5px ;
+    font-size: 1.2em;
   }
 }
