--- a/css/style.css
+++ b/css/style.css
@@ -79,13 +79,13 @@ button:hover {
 
 .contenedorResultados {
   background-color: burlywood;
+  width: 100%;
 }
 
 @media (max-width: 600px) {
   .contenedorGeneral {
     width: 90%;
     gap: 10px;
-    padding: 0 5px;
   }
 
   .contenedorBuscador {
