--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ body {
   background-color: rgb(236, 198, 214);
 }
 .contenedorGeneral {
-  width: fit-content;
+  width: 30%;
   height: auto;
   border: 1px solid silver;
   margin: 30px auto;
@@ -42,9 +42,11 @@ body {
   border-radius: 5px;
   width: 100%;
 }
+
 .fieldset > * {
   flex: 1;
 }
+
 .lblLenguaje {
   text-align: right;
   font-weight: bold;
@@ -73,11 +75,13 @@ body {
   width: fit-content;
   padding: 20px;
   background-color: #ddd;
+  opacity: 0.8;
   position: fixed;
-  top: 50%;
+  top: 40%;
   left: 50%;
   transform: translate(-50%, -50%);
-  z-index: 1000;
+  z-index: 1001;
+  border-radius: 8px;
 }
 
 .btnCerrar {
@@ -95,6 +99,16 @@ body {
   border: none;
 }
 
+.overlay{
+  position:fixed;
+  top:0;
+  left:0;
+  width:100%;
+  height:100%;
+  background:rgba(0, 0, 0, 0.8);
+  z-index:1000;
+}
+
 /*---------------------------------------------------------------
 TAMAÑO MOBILE
 ---------------------------------------------------------------*/
@@ -109,7 +123,7 @@ TAMAÑO MOBILE
   }
 
   .contenedorGeneral{
-    width: 95%;
+    width: 90%;
   }
 
 }
