--- a/css/style.css
+++ b/css/style.css
@@ -10,24 +10,33 @@ html {
 }
 body {
   font-size: 1em;
-  background-color: rgb(236, 198, 214);
+}
+.fullContainer {
+  width: 100%;
+  height: 100vh;
+  background-image: url("/imagenes/fondo.webp");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  padding-top: 30px;
 }
 .contenedorGeneral {
   width: 30%;
   height: auto;
   border: 1px solid silver;
-  margin: 30px auto;
+  margin: 0 auto;
   display: grid;
   place-items: center;
   gap: 15px;
-  background-color: #e7e7e7;
+  background-color: rgba(236, 234, 234, 0.5);
   border-radius: 5px;
   box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.3), 3px 0px 3px rgba(0, 0, 0, 0.3);
   padding: 10px;
+  color: azure;
 }
 
 .legend {
-  font-weight: bold;
+  font-weight: 500;
   font-size: 1.2em;
   text-align: center;
   padding: 0 5px;
@@ -49,19 +58,20 @@ body {
 
 .lblLenguaje {
   text-align: right;
-  font-weight: bold;
+  font-weight: 500;
 }
 
 .selectorCategorias {
   height: 25px;
-  background-color: #e7e7e7;;
+  background-color: #e7e7e7;
 }
 
 .contenedorResultados {
-  background-color: burlywood;
+  background-color:rgba(0, 0, 0, 0.6);
   width: 100%;
-  font-weight: 600;
+  font-weight: 500;
   font-size: 1em;
+  color:whitesmoke ;
 }
 
 .listaResultados {
@@ -74,14 +84,17 @@ body {
 .modal {
   width: fit-content;
   padding: 20px;
-  background-color: #ddd;
-  opacity: 0.8;
+  background-color: white;
+  /* opacity: 0.8; */
   position: fixed;
   top: 40%;
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: 1001;
   border-radius: 8px;
+  font-weight: 500;
+  color:black ;
+  text-shadow: 0px 2px 1px rgb(165, 164, 164);
 }
 
 .btnCerrar {
@@ -99,21 +112,20 @@ body {
   border: none;
 }
 
-.overlay{
-  position:fixed;
-  top:0;
-  left:0;
-  width:100%;
-  height:100%;
-  background:rgba(0, 0, 0, 0.8);
-  z-index:1000;
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.8);
+  z-index: 1000;
 }
 
 /*---------------------------------------------------------------
 TAMAÑO MOBILE
 ---------------------------------------------------------------*/
 @media (max-width: 600px) {
-
   .selectorCategorias {
     border: 1px solid black;
     border-radius: 0;
@@ -122,8 +134,7 @@ TAMAÑO MOBILE
     width: 140px;
   }
 
-  .contenedorGeneral{
+  .contenedorGeneral {
     width: 90%;
   }
-
 }
