--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,8 @@ body {
 }
 .fullContainer {
   width: 100%;
-  height: 100vh;
+  height: auto;
+  min-height: 100vh;
   background-image: url("/imagenes/fondo.webp");
   background-size: cover;
   background-position: center;
@@ -89,10 +90,16 @@ body {
 }
 
 .listaResultados {
-  list-style-position: inside;
+  list-style: none;
   padding: 10px;
   margin: 0;
   display: none;
+}
+
+.liTip{
+  cursor: pointer;
+  border-Bottom: 1px solid silver;
+  padding: 10px 0;
 }
 
 .modal {
