--- a/css/style.css
+++ b/css/style.css
@@ -96,9 +96,9 @@ body {
   display: none;
 }
 
-.liTip{
+.liTip {
   cursor: pointer;
-  border-Bottom: 1px solid silver;
+  border-bottom: 1px solid silver;
   padding: 10px 0;
 }
 
@@ -161,6 +161,20 @@ MEDIA QUERIES PARA RESPONSIVE A DIFERENTES PANTALLAS
 /* Tamaño para celulares */
 @media (max-width: 600px) {
   .contenedorGeneral {
-    width: 95%;
+    width: 90%;
+  }
+
+  .modal {
+    width: 96%;
+    padding: 20px;
+    background-color: white;
+    position: fixed;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1001;
+    border-radius: 8px;
+    font-weight: 500;
+    color: black;
   }
 }
