--- a/css/style.css
+++ b/css/style.css
@@ -22,14 +22,14 @@ body {
   padding-top: 30px;
 }
 .contenedorGeneral {
-  width: 30%;
+  width: 40%;
   height: auto;
   border: 1px solid silver;
   margin: 0 auto;
   display: grid;
   place-items: center;
   gap: 15px;
-  background-color: rgba(236, 234, 234, 0.5);
+  background-color: rgba(0, 0, 0, 0.7);
   border-radius: 5px;
   box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.3), 3px 0px 3px rgba(0, 0, 0, 0.3);
   padding: 10px;
@@ -44,7 +44,7 @@ body {
 }
 
 .fieldSet {
-  border: 1.5px solid black;
+  border: 1.5px solid silver;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -53,13 +53,19 @@ body {
   width: 100%;
 }
 
-.fieldSet > * {
-  width: fit-content;
+.contenedorCategorias{
+  display: flex;
+  align-items: center;
+  gap: 2px;
+}
+
+.inputBusqueda{
+  width: 60%;
 }
 
 .contenedorLogoTech {
   display: inline-block;
-  width: 20%;
+  width: 35%;
 }
 
 .contenedorLogoTech img {
@@ -67,18 +73,23 @@ body {
 }
 
 .lblLenguaje {
-  text-align: right;
   font-weight: 500;
 }
 
 .selectorCategorias {
-  width: 140px;
+  width: 80%;
   height: 25px;
   background-color: #e7e7e7;
   border: 1px solid #e7e7e7;
   border-radius: 5px;
   color: black;
   font-weight: 500;
+}
+
+.inputBusqueda{
+  border-radius: 5px;
+  height: 28px;
+  
 }
 
 .contenedorResultados {
@@ -166,6 +177,10 @@ MEDIA QUERIES PARA RESPONSIVE A DIFERENTES PANTALLAS
 @media (max-width: 600px) {
   .contenedorGeneral {
     width: 95%;
+  }
+
+  .selectorCategorias{
+    width: 80%;
   }
 
   .modal {
