--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ html {
 
 body {
   font-size: 1em;
-  background-image: url("../imagenes/fondo.webp");
+  background-image: url("../imagenes/fondos/fondo.webp");
   background-repeat: no-repeat;
   background-position: center;
   background-size: 100% 100%;
@@ -21,70 +21,66 @@ body {
 .contenedorGeneral {
   width: 40%;
   height: auto;
-  border: 1px solid silver;
-  margin: 5px auto;
-  display: grid;
-  place-items: center;
-  gap: 15px;
+  margin: 15px auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 5px;
   background-color: rgba(0, 0, 0, 0.2);
   border-radius: 5px;
   box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.3), 3px 0px 3px rgba(0, 0, 0, 0.3);
   color: azure;
-}
-
-.legend {
-  font-weight: 500;
-  font-size: 1.2em;
-  text-align: center;
-  padding: 0 5px;
+  padding: 5px;
 }
 
 .fieldSet {
-  border: 1.5px solid silver;
+  width: 100%;
+  border: .5px solid silver;
   display: flex;
-  justify-content: center;
+  justify-content:center;
   align-items: center;
-  gap: 10px;
-  border-radius: 5px;
-  width: 90%;
-  margin-top: 10px;
+  gap: 3px;
+  border-radius: 10px;
+}
+
+.legend {
+  font-weight: 400;
+  font-size: 1.2em;
+  text-align: center;
 }
 
 .contenedorCategorias {
+  width: 60%;
   display: flex;
   align-items: center;
-  gap: 2px;
 }
 
 .inputBusqueda {
-  width: 60%;
+  width: 40%;
 }
 
 .contenedorLogoTech {
-  display: inline-block;
-  width: 35%;
-}
-
-.contenedorLogoTech img {
-  width: 100%;
-}
-
-.lblLenguaje {
-  font-weight: 500;
+  width: 25%;
+  text-align: center;
 }
 
 .selectorCategorias {
-  width: 80%;
+  width: 75%;
   height: 25px;
   background-color: #e7e7e7;
   border: 1px solid #e7e7e7;
-  border-radius: 5px;
+  border-radius: 3px;
   color: black;
   font-weight: 500;
 }
 
+.contenedorLogoTech img {
+  width: 80%;
+}
+
 .inputBusqueda {
-  border-radius: 5px;
+  border-radius: 3px;
   height: 28px;
 }
 
@@ -97,7 +93,7 @@ body {
 
 .listaResultados {
   list-style: none;
-  padding: 10px;
+  padding: 0;
   margin: 0;
   display: none;
 }
@@ -115,8 +111,8 @@ body {
 
 .modal {
   width: fit-content;
-  padding: 20px;
-  background-color: white;
+  padding: 10px;
+  background-color: azure;
   position: fixed;
   top: 50%;
   left: 50%;
@@ -131,15 +127,15 @@ body {
   position: absolute;
   top: 0;
   right: 0;
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  font-size: 1.5rem;
+  width: 30px;
+  height: 30px;
+  font-size: 1.2rem;
   display: flex;
   justify-content: center;
   align-items: center;
   background: transparent;
   border: none;
+  cursor: pointer;
 }
 
 .overlay {
@@ -148,7 +144,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.8);
+  background: rgba(0, 0, 0, 0.9);
   z-index: 1000;
 }
 
@@ -176,14 +172,12 @@ MEDIA QUERIES PARA RESPONSIVE A DIFERENTES PANTALLAS
 }
 
   .contenedorGeneral {
-    width: 95%;
-  }
-
-  .selectorCategorias {
-    width: 80%;
+    width: 98%;
   }
 
   .modal {
-    width: 93%;
+    width: 100%;
+    background: rgb(162, 167, 162);
+    font-size: 1.1em;
   }
 }
